--- a/src/lib/palette.styl
+++ b/src/lib/palette.styl
@@ -1,4 +1,4 @@
-THEME = json('../../../node_modules/@artsy/palette/dist/tokens.json', { hash: true })
+THEME = json('../../node_modules/@artsy/palette/dist/tokens.json', { hash: true })
 
 // Access themed values
 
@@ -28,6 +28,12 @@ getLetterSpacing(name)
 
 getColor(name)
   value = THEME.colors[name]
+  if value == null
+    error('cannot find: ' + name)
+  value
+
+getSpace(name)
+  value = THEME.space[name]
   if value == null
     error('cannot find: ' + name)
   value
